# NeuroCluster

./: .gitignore  =4.2.5  API_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NeuroCluster_env.yml  README.md  paper.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  main.yml  tests.yml
NeuroCluster/: NeuroCluster.py  TFR_Cluster_Test.py  __init__.py  cluster_utils.py  helper_utils.py  plotting_utils.py  plotting_utils_INDEV.py
NeuroCluster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
NeuroCluster/data/synthetic_validation_tfr_data/: Generate_Synthetic_TFR_data.ipynb
anat/: master_labels.csv
archive/: NeuroCluster_V1_depreciated.ipynb  TFR_Cluster_Test_DEV.py  cluster_utils_V1.py  tfr_cluster_test copy.py
archive/NeuroCluster/: tfr_cluster_test.py
data/: sample_behavior.csv
data/synthetic_validation_tfr_data/: Generate_Synthetic_TFR_data.ipynb
notebooks/: NeuroCluster_DEV.ipynb  NeuroCluster_alie_scratch.ipynb  NeuroCluster_clean.ipynb  NeuroCluster_inDEV.ipynb  NeuroCluster_scratch.ipynb  NeuroCluster_template.ipynb  NeuroCluster_template_scrap.ipynb
paper/: NeuroCluster_V2_CM.docx  NeuroCluster_V2_CM_textonly.docx  NeuroCluster_paper.docx  NeuroCluster_paper_Final.docx  NeuroCluster_paper_V3.docx  Paper_text.docx  paper.bib  paper.md  paper_draft copy.docx  paper_draft.docx  ~$per_draft.docx  ~$per_text.docx  ~$uroCluster_paper_Final.docx
scripts/: NeuroCluster_Ready2Run.ipynb  NeuroCluster_inDEV.ipynb  cluster_utils.py  helper_utils.py  plotting_utils.py  plotting_utils_INDEV.py  tfr_cluster_test.py
template_data/: sample_behavior_data.csv
tests/: test_workflow.py
workflow/: Figure2_V2.afdesign  Figure2_V2.afdesign~lock~  paper-build.yml  t-crit-alternatives.afdesign~lock~  workflow.pptx  ~$workflow.pptx
