[build-system]

requires = [
  "setuptools>=70",
  "wheel"                          
]
build-backend = "setuptools.build_meta"

[project]
name = "NeuroCluster"
version = "0.1.0"
description = "Cluster-based permutation testing for neurophysiological data"
authors = [
  { name = "Christina Maher", email = "christina.maher@icahn.mssm.edu" },
  { name = "Alexandra Fink",  email = "alexandra.fink@icahn.mssm.edu" }
]
readme = "README.md"
# Support modern Pythons (including 3.13); tighten later if you must.
requires-python = ">=3.9,<3.14"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# >>> RUNTIME deps only (no numpy in build-system) <<<
dependencies = [
  # Use binary wheels; avoid legacy distutils-based releases
  'numpy>=1.26; python_version < "3.12"',
  'numpy>=2.0;  python_version >= "3.12"',
  "pandas>=1.3",
  "matplotlib>=3.6",
  "joblib>=1.0.1",
  "scipy>=1.10",
  "statsmodels>=0.13",
  "seaborn>=0.12"
]