[build-system]
requires = [
  "setuptools>=70",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "NeuroCluster"
version = "0.1.0"
description = "Cluster-based permutation testing for neurophysiological data"
authors = [
  { name = "Christina Maher", email = "christina.maher@icahn.mssm.edu" },
  { name = "Alexandra Fink",  email = "alexandra.fink@icahn.mssm.edu" }
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Runtime deps only; choose NumPy version by interpreter version.
dependencies = [
  # NumPy: 1.26+ for <3.12; 2.x for >=3.12
  'numpy>=1.26,<3; python_version < "3.12"',
  'numpy>=2,<3;  python_version >= "3.12"',

  # Pandas: older floor for <3.12; bump for NumPy 2 on >=3.12
  'pandas>=1.3;   python_version < "3.12"',
  'pandas>=2.2;   python_version >= "3.12"',

  "matplotlib>=3.6",
  "joblib>=1.0.1",

  # SciPy: ensure a version compatible with NumPy 2 on >=3.12
  'scipy>=1.10;   python_version < "3.12"',
  'scipy>=1.14;   python_version >= "3.12"',

  # Statsmodels: bump for NumPy 2 compatibility on >=3.12
  'statsmodels>=0.13;    python_version < "3.12"',
  'statsmodels>=0.14.2;  python_version >= "3.12"',

  # Seaborn is pure-Python; keep a modern floor
  "seaborn>=0.12"
]
