[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuroCluster"
version = "0.1.0"
description = "Cluster-based permutation testing for neurophys data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  {name = "Christina Maher", email = "christina.maher@icahn.mssm.edu"},
  {name = "Alexandra Fink", email = "alexandra.fink@icahn.mssm.edu"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.3",
  "matplotlib>=3.6",
  "joblib>=1.0.1",
  "scipy",
  "statsmodels",
  "seaborn"
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
NeuroCluster = ["data/*.npy", "data/*.csv"]
